// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > displays with search button 1`] = `
<DocumentFragment>
  <div
    class="sc-gNZgCX bAVTuz aje-field__search is-medium"
  >
    <label
      class="sc-FEMpB encIGH"
      for="react-aria-:r5:"
      id="react-aria-:r6:"
    >
      search
    </label>
    <div
      class="sc-dycHyt kIeuYg aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r6:"
        class="sc-fLDLck XprmO"
        id="react-aria-:r5:"
        tabindex="0"
        type="search"
        value=""
      />
      <button
        aria-label="search"
        class="sc-hRDKVd sc-jBIHhB kwslFf hAzCSo aje-btn aje-icon-btn aje-btn--content is-medium"
        data-icon-button="true"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-kfeOyU ceGEEk aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > displays without button 1`] = `
<DocumentFragment>
  <div
    class="sc-gNZgCX bAVTuz aje-field__search is-medium"
  >
    <label
      class="sc-FEMpB encIGH"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      search
    </label>
    <div
      class="sc-dycHyt kIeuYg aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r1:"
        class="sc-fLDLck XprmO"
        id="react-aria-:r0:"
        tabindex="0"
        type="search"
        value=""
      />
      <button
        aria-label="search"
        class="sc-hRDKVd sc-jBIHhB kwslFf hAzCSo aje-btn aje-icon-btn aje-btn--content is-medium"
        data-icon-button="true"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-kfeOyU ceGEEk aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
